mengubah file index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <h1>Anda Siapa?!?</h1>
+
+    <h3>Ki prana Lewu</h3>
     
 </body>
 </html>
